--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ flutter:
   assets:
     - images/edf-logo.jpg
     - images/poisson_app.jpg
-    - images/recompenses.png
+    - images/achatsv2.png
+    - images/jaugev2.png
+    - images/associations.png
+    - images/entreprises.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
